rozszerzenie walidacji i obsługi wyjątków w konstruktorze klasy Stałoliczbowy, dodanie testów oraz refaktoryzacja metod pomocniczych i stałych